Bug 73962 - [BDW Bisected]igt/many kms_flip subcases fail
Summary: [BDW Bisected]igt/many kms_flip subcases fail
Status: CLOSED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Intel (show other bugs)
Version: unspecified
Hardware: All Linux (All)
: high major
Assignee: Ville Syrjala
QA Contact: Intel GFX Bugs mailing list
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2014-01-23 07:45 UTC by lu hua
Modified: 2017-10-06 14:40 UTC (History)
2 users (show)

See Also:
i915 platform:
i915 features:


Attachments
dmesg (106.20 KB, text/plain)
2014-01-23 07:45 UTC, lu hua
no flags Details
drm/i915: Fix scanline counter fixup on BDW (2.37 KB, patch)
2014-02-03 15:15 UTC, Ville Syrjala
no flags Details | Splinter Review

Description lu hua 2014-01-23 07:45:28 UTC
Created attachment 92641 [details]
dmesg

System Environment:
--------------------------
Platform: Broadwell
Kernel(drm-intel-nightly)83ac01f486397fd8d319a3e31d1f95beb05037c5

Bug detailed description:
------------------------- 
Many kms_flip subcases fail on Broadwell with -queued, -fixes and -nightly kernel.

The latest known good commit: cba1c07377132fb87b2c73b395ef386da7e03f60
The latest known bad commit: 5d9544569e36a1489298d3df482f1574d9512de8

run ./kms_flip --run-subtest plain-flip-fb-recreate-interruptible
output:
IGT-Version: 1.5-g1bbb607 (x86_64) (Linux: 3.13.0-rc8_drm-intel-next-queued_5d9544_20140123+ x86_64)
Using monotonic timestamps
Beginning plain-flip-fb-recreate-interruptible on crtc 3, connector 10
  1920x1080 60 1920 1966 1996 2080 1080 1082 1086 1112 0xa 0x48 138780
.........unexpected flip seq 3610, should be >= 3611
Subtest plain-flip-fb-recreate-interruptible: FAIL

Reproduce steps:
-------------------------
1.  ./kms_flip --run-subtest plain-flip-fb-recreate-interruptible
Comment 1 Paulo Zanoni 2014-01-23 13:57:03 UTC
Hi

Please run the subtest a few times on a bad Kernel, and please confirm if it happens 100% of the times or not.

Can you please also finish bisecting? There's a gap between the "latest known good commit" and "latest known bad commit".

Thanks,
Paulo
Comment 2 lu hua 2014-01-27 08:26:15 UTC
Bisect shows: 8072bfa6045a264d3913102a35fab125b06603a2 is the first bad commit.
commit 8072bfa6045a264d3913102a35fab125b06603a2
Author:     Ville Syrjälä <ville.syrjala@linux.intel.com>
AuthorDate: Mon Oct 28 21:22:52 2013 +0200
Commit:     Ville Syrjälä <ville.syrjala@linux.intel.com>
CommitDate: Mon Jan 20 12:21:35 2014 +0200

    drm/radeon: Move the early vblank IRQ fixup to radeon_get_crtc_scanoutpos()

    i915 doesn't need this kludge for most platforms. Although we do
    appear to need something similar on certain platforms, but we can
    be more accurate when we apply the adjustment since we know exactly
    why the scanline counter doesn't always quite match the vblank
    status.

    Also the current code doesn't handle interlaced modes correctly,
    and we already deal with interlaced modes in i915 code.

    So let's just move the current code to radeon_get_crtc_scanoutpos()
    since that's why it was added. For i915 we'll add a more finely
    targeted variant.

    v2: Fix vpos vs. *vpos bug (Mario)

    Reviewed-by: mario.kleiner.de@gmail.com
    Signed-off-by: Ville Syrjälä <ville.syrjala@linux.intel.com>
Comment 3 Ville Syrjala 2014-02-03 15:15:12 UTC
Created attachment 93288 [details] [review]
drm/i915: Fix scanline counter fixup on BDW

Please give this patch a try.
Comment 4 lu hua 2014-02-07 08:48:54 UTC
(In reply to comment #3)
> Created attachment 93288 [details] [review] [review]
> drm/i915: Fix scanline counter fixup on BDW
> 
> Please give this patch a try.

Fixed by this patch.
Comment 5 Jani Nikula 2014-03-12 16:48:39 UTC
Fix pushed, thanks for the report.

commit 243026249324b2c958b67ab387fe6813a9836fe0
Author: Ville Syrjälä <ville.syrjala@linux.intel.com>
Date:   Tue Mar 11 12:58:46 2014 +0200

    drm/i915: Fix scanline counter fixup on BDW
Comment 6 lu hua 2014-03-14 02:04:05 UTC
Verified.Fixed.
Comment 7 Elizabeth 2017-10-06 14:40:08 UTC
Closing old verified.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.